--- a/.github/workflows/main_cloud-yantra-apps-aiq.yml
+++ b/.github/workflows/main_cloud-yantra-apps-aiq.yml
@@ -81,17 +81,17 @@ jobs:
             rg=$(az webapp list --query "[?name=='${{ secrets.AZURE_APP_SERVICE_NAME }}'].resourceGroup" --output tsv)
             echo Setting SCM_DO_BUILD_DURING_DEPLOYMENT=false on app service ${{ secrets.AZURE_APP_SERVICE_NAME }}
             az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings SCM_DO_BUILD_DURING_DEPLOYMENT=false -o none
-            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings ADMIN_EMAIL_ADDRESS=${{ env.ADMIN_EMAIL_ADDRESS }}  -o none
-            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_AD_CLIENT_ID=${{ env.AZURE_AD_CLIENT_ID }}  -o none
-            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_AD_TENANT_ID=${{ env.AZURE_AD_TENANT_ID }}  -o none
-            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_COSMOSDB_CONTAINER_NAME=${{ env.AZURE_COSMOSDB_CONTAINER_NAME }}  -o none
-            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_COSMOSDB_DB_NAME=${{ env.AZURE_COSMOSDB_DB_NAME }}  -o none
-            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_COSMOSDB_URI=${{ env.AZURE_COSMOSDB_URI }}  -o none
-            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_OPENAI_API_DEPLOYMENT_NAME=${{ env.AZURE_OPENAI_API_DEPLOYMENT_NAME }}  -o none
-            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_OPENAI_API_DEPLOYMENT_NAME=${{ env.AZURE_OPENAI_API_DEPLOYMENT_NAME }}  -o none
-            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME=${{ env.AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME }}  -o none
-            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_OPENAI_API_INSTANCE_NAME=${{ env.AZURE_OPENAI_API_INSTANCE_NAME }}  -o none
-            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_OPENAI_API_VERSION=${{ env.AZURE_OPENAI_API_VERSION }}  -o none
+            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings ADMIN_EMAIL_ADDRESS=${{ vars.ADMIN_EMAIL_ADDRESS }}  -o none
+            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_AD_CLIENT_ID=${{ vars.AZURE_AD_CLIENT_ID }}  -o none
+            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_AD_TENANT_ID=${{ vars.AZURE_AD_TENANT_ID }}  -o none
+            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_COSMOSDB_CONTAINER_NAME=${{ vars.AZURE_COSMOSDB_CONTAINER_NAME }}  -o none
+            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_COSMOSDB_DB_NAME=${{ vars.AZURE_COSMOSDB_DB_NAME }}  -o none
+            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_COSMOSDB_URI=${{ vars.AZURE_COSMOSDB_URI }}  -o none
+            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_OPENAI_API_DEPLOYMENT_NAME=${{ vars.AZURE_OPENAI_API_DEPLOYMENT_NAME }}  -o none
+            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_OPENAI_API_DEPLOYMENT_NAME=${{ vars.AZURE_OPENAI_API_DEPLOYMENT_NAME }}  -o none
+            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME=${{ vars.AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME }}  -o none
+            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_OPENAI_API_INSTANCE_NAME=${{ vars.AZURE_OPENAI_API_INSTANCE_NAME }}  -o none
+            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_OPENAI_API_VERSION=${{ vars.AZURE_OPENAI_API_VERSION }}  -o none
             
             az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_AD_CLIENT_SECRET=${{ secrets.AZURE_AD_CLIENT_SECRET }}  -o none
             az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_COSMOSDB_KEY=${{ secrets.AZURE_COSMOSDB_KEY }}  -o none
