--- a/.github/workflows/main_cloud-yantra-apps-aiq.yml
+++ b/.github/workflows/main_cloud-yantra-apps-aiq.yml
@@ -109,16 +109,7 @@ jobs:
           app-name: ${{ secrets.AZURE_APP_SERVICE_NAME }}
           slot-name: Production
           package: ${{ github.workspace }}/Nextjs-site.zip
-          publish-profile: ${{ secrets.AZURE_APP_SERVICE_NAME }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_436B109A22C74FAEA7D4E554BB320B1A }}
 
       - name: 🧹 Cleanup
         run: rm ${{ github.workspace }}/Nextjs-site.zip
-      
-#      - name: 🚀 Deploy to Azure Web App
-#        id: deploy-to-webapp
-#        uses: azure/webapps-deploy@v2
-#        with:
-#          app-name: cloud-yantra-apps-aiq
-#          slot-name: Production
-#          package: .
-#          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_436B109A22C74FAEA7D4E554BB320B1A }}
