setting NEXTAUTH_URL

--- a/.github/workflows/main_cloud-yantra-apps-aiq.yml
+++ b/.github/workflows/main_cloud-yantra-apps-aiq.yml
@@ -92,6 +92,7 @@ jobs:
             az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME=${{ vars.AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME }}  -o none
             az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_OPENAI_API_INSTANCE_NAME=${{ vars.AZURE_OPENAI_API_INSTANCE_NAME }}  -o none
             az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_OPENAI_API_VERSION=${{ vars.AZURE_OPENAI_API_VERSION }}  -o none
+            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings NEXTAUTH_URL=${{ vars.NEXTAUTH_URL }}  -o none
             
             az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_AD_CLIENT_SECRET=${{ secrets.AZURE_AD_CLIENT_SECRET }}  -o none
             az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings AZURE_COSMOSDB_KEY=${{ secrets.AZURE_COSMOSDB_KEY }}  -o none
